# hwinfo

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build_embed.bat  build_embed.sh
cmake/: hwinfo_local_requirements.h.in
examples/: CMakeLists.txt  embeddedRequirementsMain.cpp  hardware_summaryMain.cpp  requirementsMain.cpp  system_infoMain.cpp
include/hwinfo/: cpu.h  hwinfo.h  requirements.h
scripts/: feature-tests.shell
src/: CMakeLists.txt
src/apple/: cpu.cpp
src/linux/: cpu.cpp  gpu.cpp
src/windows/: cpu.cpp  gpu.cpp
tests/: requirements_test.cpp  update_passmark_gpu_catalog_test.py
tools/: update_passmark_gpu_catalog.py
